# legal-risk-analyzer

./: README.md
legal-risk-analyzer/: __init__.py  config.py  main.py  pyproject.toml
legal-risk-analyzer/agent/: __init__.py  legal_risk_agent.py
legal-risk-analyzer/analyzer/: __init__.py  legal_risk_analyzer.py
legal-risk-analyzer/api/: main.py
legal-risk-analyzer/database/: __init__.py  legal_document_store.py  seekdb_client.py
legal-risk-analyzer/examples/: demo.py
legal-risk-analyzer/frontend/: app.py
legal-risk-analyzer/knowledge_base/: __init__.py  legal_knowledge_base.py
legal-risk-analyzer/memory/: __init__.py  memory_manager.py
